apps/simple-app/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-app
  template:
    metadata:
      labels:
        app: simple-app
    spec:
      containers:
        - name: simple-app
          image: vitaliidenysiuk97/simple-app-prod-multi:v0.0.2
          ports:
            - containerPort: 80
