apps/simple-app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-app
spec:
  type: ClusterIP
  selector:
    app: simple-app
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
