apps/simple-app/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: simple-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simple-app
                port:
                  number: 80
